...
            android:textSize="42sp"
            android:textStyle="bold"
            android:typeface="sans"
            tools:ignore="ObsoleteLayoutParam" />

        <EditText
            android:id="@+id/emailText"
            android:layout_width="253dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryWhite"
            android:hint="Email"
            android:inputType="textWebEmailAddress"
            android:textColor="@color/colorPrimaryWhite"
            android:textColorHint="#80cecece" />

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryWhite"
            android:hint="Password"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimaryWhite"
            android:textColorHint="#80cecece" />

        <Button
            android:id="@+id/login"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="@drawable/button_bordered_transparent"
...
