...
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:src="@drawable/marker_shop" />

            <TextView
                android:id="@+id/store"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="StoreName"
                android:textColor="@color/colorPrimaryWhite" />

        </LinearLayout>

        <TextView
            android:id="@+id/type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="8dp"
            android:text="Type: "
            android:textColor="@color/colorPrimaryWhite" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="8dp"
            android:text="Description"
...
