<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_discounts"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="Discounts"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_map"
        android:enabled="true"
        android:icon="@drawable/ic_map"
        android:title="Map"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_user_options"
        android:enabled="true"
        android:icon="@drawable/ic_hot"
        android:title="Hot Notifier"
        app:showAsAction="always" />
</menu>